v208: So fix our skills to be moved up more so there is no top whitespace and also remove the whitespce between the last row of skills and the black container use this image for information on what I am talking about

--- a/css/skills.css
+++ b/css/skills.css
@@ -26,7 +26,7 @@
   color: #ffff00;
   font-size: 12px;
   margin-top: -4px;
-  margin-bottom: 2px;
+  margin-bottom: 0px;
 }
 
 .skills-grid {
@@ -35,7 +35,7 @@
   gap: 2px;
   padding: 2px;
   width: calc(100% - 4px);
-  margin: 0 auto;
+  margin: 0;
 }
 
 .skill-slot {
@@ -69,7 +69,7 @@
 .stats-summary {
   background: #000;
   padding: 4px;
-  margin-top: 4px;
+  margin-top: 0px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 4px;
